Build - bump APP_VERSION on build; Minify CSS; Fix bug with private Task Title label being always visible

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1479,6 +1479,14 @@
     display: none;
   }
 
+  #taskFullFields.hidden {
+    display: none;
+  }
+
+  #taskPrivateReducedView.hidden {
+    display: none;
+  }
+
   #documentsBtn.hidden {
     display: none;
   }
